--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://nicky456.github.io/",
-  "name": "Niki Halasi-Szabo",
+  "name": "niki-halasi-szabo",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
